feat: Add am_tx and testbench
feat: Add am_tx.json
test: Add CHECK_STATE macro
chore: Add new exclusions to .gitignore
chore: Update init.sh with guards preventing rerunning and PYTHONPATH
chore: Better error handling in python + unified error printing + more

This commit adds the verified CSim testbench for ax_tx along with a
number of minor tweaks to make things cleaner or more robust.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,10 @@ GASCore/vivado_hls/projects/
 GASCore/build/
 GASCore/repo
 share/build/
+GASCore/testbench/build/
 *_out.json
 *.pyc
+.initialized
 
 # Prerequisites
 *.d
