Add JSON simulation infrastructure for cpp and sv
feat: Use a new JSON hierarchy for test data
feat: Add sample source code and JSON testbench
feat: Add tcl and sh scripts to make am_tx and xpams
fix: Fix init.sh echoes to bashrc
fix: Correct make file dependency resolution
fix: Remove trailing newline in test data files
fix: Add workaround for HLS file inclusion bug with fixed types
refactor: changed 'flit' and 'custom' to 'axis' and 'callTB' in JSON
style: Add include guards for inclusion of testbench.hpp in some files
style: Add significant reworking of JSON parsing and data generation
chore: Add to .gitignore
chore: Update makefile

This commit adds a new JSON structure and a new testing infrastructure
that can generate test data for both csim and systemverilog. The sv
version supports the use of parallelism, waits and delays in the
testbench. The python scripts for JSON parsing and data file generation
have been significantly redone to make them more powerful and
readable.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ vivado*.jou
 GASCore/vivado_hls/projects/
 GASCore/build/
 GASCore/repo
+GASCore/vivado/projects/
 share/build/
 GASCore/testbench/build/
 *_out.json
