Use new YAML file for simulation for am_rx
feat: Update Makefile
feat: Remove old JSON configuration files and testbenches

shoal-share

feat: Add YAML configuration file for simulation
feat: Update old scripts to use new scripts
feat: Add a sample YAML
feat: Add a template testbench to use as a base
feat: Add tkeep to axis interface definition
feat: Add new python script to parse YAML and generate testbenches
feat: Add a sample YAML
feat: Add a template testbench to use as a base
fix: Exclude debug statements properly in generate.py
fix: Add missing file close statements
refactor: Edit some python scripts
refactor: Change the generated file locations
docs: Update README

This commit uses the alpha build of the YAML-based simulation
infrastructure. The YAML is a lot easier for users to edit and is used
to automatically generate a testbench file. Testing is ongoing and new
configuration files will slowly be added back.

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 vivado*.log
 vivado*.jou
 GASCore/vivado_hls/projects/
-GASCore/build/
 GASCore/repo
 GASCore/vivado/projects/
-share/build/
-GASCore/testbench/build/
+GASCore/vivado/src/
+build/
+archive/
 *_out.json
 *.pyc
 .initialized
