Make am_rx testbenches work
feat: Merge changes to directory from Sonar
feat: Update am_rx.cpp (in-progress)
feat: Update am_rx.yaml with working test vectors
feat: Revise file hierarchy in shared folder

This update finally separates Sonar from Shoal properly. Now, using
the working Sonar, testbenches are slowly being converted from JSON to
YAML. As of this update, am_rx is fully tested.

--- a/GASCore/Makefile
+++ b/GASCore/Makefile
@@ -22,9 +22,8 @@ $(error SHOAL_PATH not set in env -- must be set to the absolute path of \
 of the repository root. Did you source init.sh?)
 endif
 
-ifndef SHOAL_SHARE_PATH
-$(error SHOAL_SHARE_PATH not set in env -- must be set to the absolute path of \
-of the share repository root. Did you source init.sh?)
+ifndef SONAR_PATH
+$(error SONAR_PATH not set in env -- sonar is required for testing)
 endif
 
 ifndef SHOAL_VIVADO_HLS
@@ -37,15 +36,16 @@ obj_dir = $(local_dir)/build
 bin_dir = $(local_dir)/build/bin
 src_dir = $(local_dir)/src
 test_dir = $(local_dir)/testbench
+test_build_dir = $(test_dir)/build
 include_dir = $(local_dir)/include
 hls_dir = $(local_dir)/vivado_hls
 vivado_dir = $(local_dir)/vivado
 
-share_dir = $(SHOAL_SHARE_PATH)
+share_dir = $(SHOAL_PATH)/share
 share_obj_dir = $(share_dir)/build
 share_bin_dir = $(share_dir)/build/bin
 share_src_dir = $(share_dir)/src
-share_include_dir = $(SHOAL_SHARE_PATH)/include
+share_include_dir = $(share_dir)/include
 share_testbench_dir = $(share_dir)/testbench
 
 obj = $(shell find $(obj_dir) -name '*.o' -printf '%f\n' | \
@@ -70,24 +70,24 @@ CFLAGS = -g -Wall -I$(include_dir) -I$(share_include_dir) \
 # Main
 #------------------------------------------------------------------------------
 
-test: $(bin_dir)/am_rx_tb $(bin_dir)/xpams_tb $(bin_dir)/am_tx_tb
-	python $(share_testbench_dir)/generate.py env SHOAL_PATH /GASCore/testbench/am_rx.json
-	# python $(share_testbench_dir)/generate.py env SHOAL_PATH /GASCore/testbench/xpams.json
-	# python $(share_testbench_dir)/generate.py env SHOAL_PATH /GASCore/testbench/am_tx.json
-	$(bin_dir)/am_rx_tb
-	# $(bin_dir)/xpams_tb
-	# $(bin_dir)/am_tx_tb
+test: yaml $(bin_dir)/am_rx_tb # $(bin_dir)/xpams_tb $(bin_dir)/am_tx_tb
+	@# python $(SONAR_PATH)/sonar.py env SHOAL_PATH /GASCore/testbench/am_rx.yaml
+	@# python $(share_testbench_dir)/generate.py env SHOAL_PATH /GASCore/testbench/xpams.json
+	@# python $(share_testbench_dir)/generate.py env SHOAL_PATH /GASCore/testbench/am_tx.json
+	$(bin_dir)/am_rx_tb --printState
+	@# $(bin_dir)/xpams_tb
+	@# $(bin_dir)/am_tx_tb
 
 yaml:
-	python $(share_testbench_dir)/generate_tb.py env SHOAL_PATH /GASCore/testbench/am_rx.yaml
+	python $(SONAR_PATH)/sonar.py env SHOAL_PATH /GASCore/testbench/am_rx.yaml
 
 hw:
-	$(hls_dir)/am_rx.sh
+	@$(hls_dir)/am_rx.sh
 	# $(hls_dir)/am_tx.sh
 	# $(hls_dir)/xpams.sh
 
 sim:
-	$(vivado_dir)/am_rx.sh
+	@$(vivado_dir)/am_rx.sh
 
 #------------------------------------------------------------------------------
 # Executables
@@ -109,14 +109,14 @@ $(bin_dir)/am_tx_tb: $(obj_dir)/am_tx_tb.o $(obj_dir)/am_tx.o $(obj_dir)/gascore
 # Object Files
 #------------------------------------------------------------------------------
 
-$(obj_dir)/am_rx_tb.o: $(test_dir)/am_rx_tb.cpp
-	$(CC) $(CFLAGS) -o $(obj_dir)/am_rx_tb.o -c $(test_dir)/am_rx_tb.cpp
+$(obj_dir)/am_rx_tb.o: $(test_build_dir)/am_rx_tb.cpp
+	$(CC) $(CFLAGS) -o $(obj_dir)/am_rx_tb.o -c $(test_build_dir)/am_rx_tb.cpp
 
-$(obj_dir)/xpams_tb.o: $(test_dir)/xpams_tb.cpp
-	$(CC) $(CFLAGS) -o $(obj_dir)/xpams_tb.o -c $(test_dir)/xpams_tb.cpp
+$(obj_dir)/xpams_tb.o: $(test_build_dir)/xpams_tb.cpp
+	$(CC) $(CFLAGS) -o $(obj_dir)/xpams_tb.o -c $(test_build_dir)/xpams_tb.cpp
 
-$(obj_dir)/am_tx_tb.o: $(test_dir)/am_tx_tb.cpp
-	$(CC) $(CFLAGS) -o $(obj_dir)/am_tx_tb.o -c $(test_dir)/am_tx_tb.cpp
+$(obj_dir)/am_tx_tb.o: $(test_build_dir)/am_tx_tb.cpp
+	$(CC) $(CFLAGS) -o $(obj_dir)/am_tx_tb.o -c $(test_build_dir)/am_tx_tb.cpp
 
 $(obj_dir)/am_rx.o: $(src_dir)/am_rx.cpp
 	$(CC) $(CFLAGS) -o $(obj_dir)/am_rx.o -c $(src_dir)/am_rx.cpp
